# pytokenizer

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: lint.yml
benchmarks/: CMakeLists.txt  bench.cpp
csrc/include/libtokenizer/: libtokenizer.hpp
csrc/include/libtokenizer/core/: tokenizer.hpp
csrc/src/core/: CMakeLists.txt  tokenizer.cpp
src/pytokenizer/: python_implementation.py
test/: CMakeLists.txt  playground.cpp
